Inclusão do css, javascript, bootstrap e adaptações no html das páginas

--- a/contato.html
+++ b/contato.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minimercado | Contato</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Contato</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 </head>
 <body>
     <header>
@@ -15,6 +16,7 @@
             <a href="nao_pereciveis.html">Não Perecíveis</a>
             <a href="higiene_limpeza.html">Higiene e Limpeza</a> |
             <a href="servicos.html">Serviços</a> |
+            <a href="cadastro.html">Cadastro</a> |
             <a href="contato.html">Contato</a>
         </nav>
     </header>
