--- a/frutas_verduras.html
+++ b/frutas_verduras.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frutas e Verduras</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 </head>
 <body>
     <header>
@@ -15,6 +16,7 @@
             <a href="nao_pereciveis.html">Não Perecíveis</a>
             <a href="higiene_limpeza.html">Higiene e Limpeza</a> |
             <a href="servicos.html">Serviços</a> |
+            <a href="cadastro.html">Cadastro</a> |
             <a href="contato.html">Contato</a>
         </nav>
     </header>
@@ -27,21 +29,21 @@
             <!-- Categoria: Frutas e Verduras -->
             <h3>Frutas e Verduras</h3>
             
-            <div>
-                <img src="assets/images/tomate_cereja.jpg" alt="Bandeja com fatias de tomate cereja">
+            <div class="produto">
+                <img src="assets/images/tomate_cereja.jpg" alt="Bandeja com fatias de tomate cereja" class="produto-img">
                 <div class="produto-info">
-                    <h4>Tomate Cereja (500 gramas)</h4>
-                    <p>Coloração vibrante em tom de vermelho, conta com textura suculenta por dentro e crocante por fora.</p>
-                    <p>Valor: R$ 14,99</p>
+                    <h4 class="produto-titulo">Tomate Cereja (500 gramas)</h4>
+                    <p class="produto-descricao">Coloração vibrante em tom de vermelho, conta com textura suculenta por dentro e crocante por fora.</p>
+                    <p class="preco">Valor: R$ 14,99</p>
                 </div>
             </div>
 
-            <div>
-                <img src="assets/images/alface_americana.jpg" alt="Maço de alface americana">
+            <div class="produto">
+                <img src="assets/images/alface_americana.jpg" alt="Maço de alface americana" class="produto-img">
                 <div class="produto-info">
-                    <h4>Alface-americana (200 gramas)</h4>
-                    <p>Caracterizada especialmente por suas folhas em coloração verde claro, possui sabor suave e delicado.</p>
-                    <p>Valor: R$ 7,98</p>
+                    <h4 class="produto-info">Alface-americana (200 gramas)</h4>
+                    <p class="produto-descricao">Caracterizada especialmente por suas folhas em coloração verde claro, possui sabor suave e delicado.</p>
+                    <p class="preco">Valor: R$ 7,98</p>
                 </div>
             </div>
 
