--- a/nao_pereciveis.html
+++ b/nao_pereciveis.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Não Perecíveis</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 </head>
 <body>
     <header>
@@ -15,6 +16,7 @@
             <a href="nao_pereciveis.html">Não Perecíveis</a>
             <a href="higiene_limpeza.html">Higiene e Limpeza</a> |
             <a href="servicos.html">Serviços</a> |
+            <a href="cadastro.html">Cadastro</a> |
             <a href="contato.html">Contato</a>
         </nav>
     </header>
@@ -27,21 +29,21 @@
             <!-- Categoria: Produtos Alimentícios Não Perecíveis -->
             <h3>Produtos Alimentícios Não Perecíveis</h3>
 
-            <div>
-                <img src="assets/images/arroz_rico.jpg" alt="Embalagem de arroz rico">
+            <div class="produto">
+                <img src="assets/images/arroz_rico.jpg" alt="Embalagem de arroz rico" class="produto-img">
                 <div class="produto-info">
-                    <h4>Arroz Integral Rico (1 kilo)</h4>
-                    <p>Longo e fino, após preparado, de acordo com as recomendações, possui textura ligeiramente firme e sabor suave.</p>
-                    <p>Valor: R$ 5,98</p>
+                    <h4 class="produto-titulo">Arroz Integral Rico (1 kilo)</h4>
+                    <p class="produto-descricao">Longo e fino, após preparado, de acordo com as recomendações, possui textura ligeiramente firme e sabor suave.</p>
+                    <p class="preco">Valor: R$ 5,98</p>
                 </div>
             </div>
 
-            <div>
-                <img src="assets/images/leite_em_po.jpg" alt="Lata de lei em pó com uma menina sorrindo">
+            <div class="produto">
+                <img src="assets/images/leite_em_po.jpg" alt="Lata de lei em pó com uma menina sorrindo" class="produto-img">
                 <div class="produto-info">
-                    <h4>Leite em Pó Mikko (280 gramas)</h4>
-                    <p>Fonte de cálcio, ferro, zinco e vitaminas A, C, D e E. A porção de 25 gramas possui valor energético de 126 kcal.</p>
-                    <p>Valor: R$ 25,90</p>
+                    <h4 class="produto-titulo">Leite em Pó Mikko (280 gramas)</h4>
+                    <p class="produto-descricao">Fonte de cálcio, ferro, zinco e vitaminas A, C, D e E. A porção de 25 gramas possui valor energético de 126 kcal.</p>
+                    <p class="preco">Valor: R$ 25,90</p>
                 </div>
             </div>
 
