--- a/higiene_limpeza.html
+++ b/higiene_limpeza.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Higiene e Limpeza</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 </head>
 <body>
     <header>
@@ -15,6 +16,7 @@
             <a href="nao_pereciveis.html">Não Perecíveis</a>
             <a href="higiene_limpeza.html">Higiene e Limpeza</a> |
             <a href="servicos.html">Serviços</a> |
+            <a href="cadastro.html">Cadastro</a> |
             <a href="contato.html">Contato</a>
         </nav>
     </header>
@@ -27,21 +29,21 @@
             <!-- Categoria: Produtos de Higiene e Limpeza -->
             <h3>Higiene e Limpeza</h3>
 
-            <div>
-                <img src="assets/images/detergente_liquido.jpg" alt="Embalagem de detergente líquido">
+            <div class="produto">
+                <img src="assets/images/detergente_liquido.jpg" alt="Embalagem de detergente líquido" class="produto-img">
                 <div class="produto-info">
-                    <h4>Detergente Líquido Neutro (5 litros)</h4>
-                    <p>Solução eficiente para limpeza, possui ativos com ação antiodor. Ideal para uso doméstico e profissional.</p>
-                    <p>Valor: R$ 27,98</p>
+                    <h4 class="produto-titulo">Detergente Líquido Neutro (5 litros)</h4>
+                    <p class="produto-descricao">Solução eficiente para limpeza, possui ativos com ação antiodor. Ideal para uso doméstico e profissional.</p>
+                    <p class="preco">Valor: R$ 27,98</p>
                 </div>
             </div>
 
-            <div>
-                <img src="assets/images/shampoo_feminino.jpg" alt="Embalagem de shampoo feminino com foto de uma mulher">
+            <div class="produto">
+                <img src="assets/images/shampoo_feminino.jpg" alt="Embalagem de shampoo feminino com foto de uma mulher" class="produto-img">
                 <div class="produto-info">
-                    <h4>Shampoo Feminino Nutre Rosa (600 ml)</h4>
-                    <p>Contém antioxidantes naturais e ph neutro para um detox dos cabelos. Ideal para cabelos secos e quebradiços.</p>
-                    <p>Valor: R$ 32,50</p>
+                    <h4 class="produto-titulo">Shampoo Feminino Nutre Rosa (600 ml)</h4>
+                    <p class="produto-descricao">Contém antioxidantes naturais e ph neutro para um detox dos cabelos. Ideal para cabelos secos e quebradiços.</p>
+                    <p class="preco">Valor: R$ 32,50</p>
                 </div>
             </div>
 
