--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minimercado</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+
 </head>
 <body>
     <header>
@@ -15,6 +17,7 @@
             <a href="nao_pereciveis.html">Não Perecíveis</a>
             <a href="higiene_limpeza.html">Higiene e Limpeza</a> |
             <a href="servicos.html">Serviços</a> |
+            <a href="cadastro.html">Cadastro</a> |
             <a href="contato.html">Contato</a>
         </nav>
     </header>
@@ -27,76 +30,63 @@
 
             <!-- Categoria: Frutas e Verduras -->
             <h3>Frutas e Verduras</h3>
-            <div>
-                <img src="assets/images/tomate_cereja.jpg" alt="Bandeja com fatias de tomate cereja">
+            <div class="produto">
+                <img src="assets/images/tomate_cereja.jpg" alt="Bandeja com fatias de tomate cereja" class="produto-img">
                 <div class="produto-info">
-                    <h4>Tomate Cereja (500 gramas)</h4>
-                    <p>Coloração vibrante em tom de vermelho, conta com textura suculenta por dentro e crocante por fora.</p>
-                    <p>Valor: R$ 14,99</p>
+                    <h4 class="produto-titulo">Tomate Cereja (500 gramas)</h4>
+                    <p class="produto-descricao">Coloração vibrante em tom de vermelho, conta com textura suculenta por dentro e crocante por fora.</p>
+                    <p class="preco">Valor: R$ 14,99</p>
                 </div>
             </div>
-            <div>
-                <img src="assets/images/alface_americana.jpg" alt="Maço de alface americana">
+            <div class="produto">
+                <img src="assets/images/alface_americana.jpg" alt="Maço de alface americana" class="produto-img">
                 <div class="produto-info">
-                    <h4>Alface-americana (200 gramas)</h4>
-                    <p>Caracterizada especialmente por suas folhas em coloração verde claro, possui sabor suave e delicado.</p>
-                    <p>Valor: R$ 7,98</p>
+                    <h4 class="produto-titulo">Alface-americana (200 gramas)</h4>
+                    <p class="produto-descricao">Caracterizada especialmente por suas folhas em coloração verde claro, possui sabor suave e delicado.</p>
+                    <p class="preco">Valor: R$ 7,98</p>
                 </div>
             </div>
 
             <!-- Categoria: Produtos Alimentícios Não Perecíveis -->
             <h3>Produtos Alimentícios Não Perecíveis</h3>
-            <div>
-                <img src="assets/images/arroz_rico.jpg" alt="Embalagem de arroz rico">
+            <div class="produto"v>
+                <img src="assets/images/arroz_rico.jpg" alt="Embalagem de arroz rico" class="produto-img">
                 <div class="produto-info">
-                    <h4>Arroz Integral Rico (1 kilo)</h4>
-                    <p>Longo e fino, após preparado, de acordo com as recomendações, possui textura ligeiramente firme e sabor suave.</p>
-                    <p>Valor: R$ 5,98</p>
+                    <h4 class="produto-titulo">Arroz Integral Rico (1 kilo)</h4>
+                    <div>
+                        <p class="produto-descricao">Longo e fino, após preparado, de acordo com as recomendações, possui textura ligeiramente firme e sabor suave.</p><br>
+                        <p class="preco">Valor: R$ 5,98</p>
+                    </div>
                 </div>
             </div>
-            <div>
-                <img src="assets/images/leite_em_po.jpg" alt="Lata de lei em pó com uma menina sorrindo">
+            <div class="produto">
+                <img src="assets/images/leite_em_po.jpg" alt="Lata de lei em pó com uma menina sorrindo" class="produto-img">
                 <div class="produto-info">
-                    <h4>Leite em Pó Mikko (280 gramas)</h4>
-                    <p>Fonte de cálcio, ferro, zinco e vitaminas A, C, D e E. A porção de 25 gramas possui valor energético de 126 kcal.</p>
-                    <p>Valor: R$ 25,90</p>
+                    <h4 class="produto-titulo">Leite em Pó Mikko (280 gramas)</h4>
+                    <p class="produto-descricao">Fonte de cálcio, ferro, zinco e vitaminas A, C, D e E. A porção de 25 gramas possui valor energético de 126 kcal.</p>
+                    <p class="preco">Valor: R$ 25,90</p>
                 </div>
             </div>
 
             <!-- Categoria: Produtos de Higiene e Limpeza -->
             <h3>Higiene e Limpeza</h3>
-            <div>
-                <img src="assets/images/detergente_liquido.jpg" alt="Embalagem de detergente líquido">
+            <div class="produto">
+                <img src="assets/images/detergente_liquido.jpg" alt="Embalagem de detergente líquido" class="produto-img">
                 <div class="produto-info">
-                    <h4>Detergente Líquido Neutro (5 litros)</h4>
-                    <p>Solução eficiente para limpeza, possui ativos com ação antiodor. Ideal para uso doméstico e profissional.</p>
-                    <p>Valor: R$ 27,98</p>
+                    <h4 class="produto-titulo">Detergente Líquido Neutro (5 litros)</h4>
+                    <p class="produto-descricao">Solução eficiente para limpeza, possui ativos com ação antiodor. Ideal para uso doméstico e profissional.</p>
+                    <p class="preco">Valor: R$ 27,98</p>
                 </div>
             </div>
-            <div>
-                <img src="assets/images/shampoo_feminino.jpg" alt="Embalagem de shampoo feminino com foto de uma mulher">
+            <div class="produto">
+                <img src="assets/images/shampoo_feminino.jpg" alt="Embalagem de shampoo feminino com foto de uma mulher" class="produto-img">
                 <div class="produto-info">
-                    <h4>Shampoo Feminino Nutre Rosa (600 ml)</h4>
-                    <p>Contém antioxidantes naturais e ph neutro para um detox dos cabelos. Ideal para cabelos secos e quebradiços.</p>
-                    <p>Valor: R$ 32,50</p>
+                    <h4 class="produto-titulo">Shampoo Feminino Nutre Rosa (600 ml)</h4>
+                    <p class="produto-descricao">Contém antioxidantes naturais e ph neutro para um detox dos cabelos. Ideal para cabelos secos e quebradiços.</p>
+                    <p class="preco">Valor: R$ 32,50</p>
                  </div>
             </div>
-        </section>
-
-        <!-- Serviços -->
-        <section id="servicos">
-            <h2>Serviços</h2>
-            <h3>Retirada no Local</h3>
-            <div>
-                <p>Endereço: Rua das Flores, 123, Porto Alegre, RS.</p>
-                <p>Valor: R$ 5,00</p>
-            </div>
-            <h3>Tele-entrega</h3>
-            <div>                
-                <p>Entregas a partir das 12 horas (meio-dia).</p>
-                <p>Valor: R$ 10,00</p>
-            </div>
-        </section>
+        </section>        
     </main>
 
     <!-- Rodapé -->
